--- a/style.css
+++ b/style.css
@@ -28,6 +28,7 @@ header {
 h1,
 h3 {
   margin: 30px 0;
+  color: #104891;
 }
 button {
   font-family: "DM Mono", monospace;
@@ -36,12 +37,62 @@ button {
   width: 160px;
   border-radius: 8px;
   margin-bottom: 40px;
+  text-align: center;
+  outline: none;
+  cursor: pointer;
+  border-color: #104891;
+  color: #104891;
+  box-shadow: 2px 6px #999;
+  background-color: #8f94fb;
+}
+button:hover {
+  background-color: #4e54c8;
+}
+button:active {
+  background-color: #4e54c8;
+  box-shadow: 2px 3px #999;
+
+  transform: translateY(4px);
 }
 .main {
   display: flex;
-  width: 60%;
+  width: 600px;
   height: 400px;
-  background-color: rgb(223, 236, 236);
+  background-color: #d4e4f8;
   flex-wrap: wrap;
   margin: 0 auto;
+  padding: 20px;
+  border-radius: 8px;
+  border: 3px solid #104891;
+}
+.field {
+  /* flex-grow, flex-shrink and flex-basis */
+  flex: 1 0 33.33%;
+  overflow: hidden;
+  position: relative;
+}
+/* Nothing: content: “”; – Useful for clearfix and inserting images as background-images (set width and height, and can even resize with background-size). */
+
+.field::after {
+  content: "";
+  display: block;
+  background: url(assets/images/field.png) bottom center no-repeat;
+  background-size: contain;
+  width: 100%;
+  height: 90px;
+  position: absolute;
+  z-index: 2;
+  bottom: -30px;
+}
+.mrBump {
+  background: url(assets/images/mrbump.png) bottom center no-repeat;
+  background-size: 60%;
+  position: absolute;
+  top: 100%;
+  width: 100%;
+  height: 100%;
+  transition: all 0.4s;
+}
+.field.up .mrBump {
+  top: 0;
 }
